net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkSecurityGroupTests/NetworkSecurityGroupApiTest[2021-04-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5b7879f1f7a849d5f0802ea4208aa6fb-a0d4d5ad82d63b37-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "378759231c28792f0d5c3241745a8048",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "1962e907-5e37-4017-bba4-a7fb448574e0",
        "x-ms-ratelimit-remaining-subscription-reads": "11948",
        "x-ms-request-id": "1962e907-5e37-4017-bba4-a7fb448574e0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153817Z:1962e907-5e37-4017-bba4-a7fb448574e0"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg4593?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-d416cf1220241ba703150f4f6c92bb5a-ac215f702f700245-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "29de6873f7f18c7c5a0c48c9c8afc0a3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:18 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "e0394162-5a92-455a-b66a-546bb60f3ab4",
        "x-ms-ratelimit-remaining-subscription-writes": "1187",
        "x-ms-request-id": "e0394162-5a92-455a-b66a-546bb60f3ab4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153818Z:e0394162-5a92-455a-b66a-546bb60f3ab4"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593",
        "name": "csmrg4593",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-6aab62e8c397d4b2a8fe441490fa3904-1b760271fe3d004b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bee68614fc0af6058b0c27f657a8141d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/159fdf74-51c6-4b27-b9b8-a4f9445d11b5?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "6519",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:20 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "df4210a3-5a78-4e8b-b666-fd1ea05eb315",
        "x-ms-client-request-id": "bee68614fc0af6058b0c27f657a8141d",
        "x-ms-correlation-request-id": "29a6ef2a-0ad7-4231-b43d-df206af29ed6",
        "x-ms-ratelimit-remaining-subscription-writes": "1186",
        "x-ms-request-id": "159fdf74-51c6-4b27-b9b8-a4f9445d11b5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153820Z:29a6ef2a-0ad7-4231-b43d-df206af29ed6"
      },
      "ResponseBody": {
        "name": "azsmnet6740",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740",
        "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "a34c9c2b-709d-4324-99b5-bc264c2a0c11",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"dab90992-19e9-4a42-a454-a35453909ef9\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/159fdf74-51c6-4b27-b9b8-a4f9445d11b5?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6aab62e8c397d4b2a8fe441490fa3904-296837296fee55b8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f945fa9d26626c69d83265eb55960264",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:21 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2dd0ebd8-a825-4491-9552-c7b64e3e94af",
        "x-ms-client-request-id": "f945fa9d26626c69d83265eb55960264",
        "x-ms-correlation-request-id": "28cb49c4-68c0-4fd1-860b-45ee34131ed9",
        "x-ms-ratelimit-remaining-subscription-reads": "11947",
        "x-ms-request-id": "7d066052-f498-4f42-b855-cfe4a463e9f2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153821Z:28cb49c4-68c0-4fd1-860b-45ee34131ed9"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6aab62e8c397d4b2a8fe441490fa3904-39b9e06effea83b0-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "44ceab3346e6e38924db133ceb1e4746",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6526",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:21 GMT",
        "ETag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f3fd54d0-429d-497d-8475-4ab756fde507",
        "x-ms-client-request-id": "44ceab3346e6e38924db133ceb1e4746",
        "x-ms-correlation-request-id": "73bf7f36-fe93-44c0-95cb-682e99dbf6ab",
        "x-ms-ratelimit-remaining-subscription-reads": "11946",
        "x-ms-request-id": "cf95fed7-3745-4fab-ab99-7e414b4caff1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153821Z:73bf7f36-fe93-44c0-95cb-682e99dbf6ab"
      },
      "ResponseBody": {
        "name": "azsmnet6740",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740",
        "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a34c9c2b-709d-4324-99b5-bc264c2a0c11",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-7140ac8d2d680193f37cbef2ed46a9f5-c104993335a511c4-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5d58b65e1a62d2bb016d83becc76b414",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6526",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:21 GMT",
        "ETag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6a4a945f-7d6a-4910-939c-fc9bc816ac42",
        "x-ms-client-request-id": "5d58b65e1a62d2bb016d83becc76b414",
        "x-ms-correlation-request-id": "bf06f207-dafa-45ef-844a-457d1e04edaf",
        "x-ms-ratelimit-remaining-subscription-reads": "11945",
        "x-ms-request-id": "86bf88e5-3b9c-48c8-be2a-1484e87f3c35",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153822Z:bf06f207-dafa-45ef-844a-457d1e04edaf"
      },
      "ResponseBody": {
        "name": "azsmnet6740",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740",
        "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a34c9c2b-709d-4324-99b5-bc264c2a0c11",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "03b3accb6876568a7062d587132c80ba",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7135",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8bf333a9-3bcd-47a6-a800-d2ff31da0c82",
        "x-ms-client-request-id": "03b3accb6876568a7062d587132c80ba",
        "x-ms-correlation-request-id": "8ba2ad42-44e5-415c-933e-7e3458df77bd",
        "x-ms-ratelimit-remaining-subscription-reads": "11944",
        "x-ms-request-id": "e7b5480a-a8a9-4905-a434-b284d0a7104d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153822Z:8ba2ad42-44e5-415c-933e-7e3458df77bd"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet6740",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740",
            "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "a34c9c2b-709d-4324-99b5-bc264c2a0c11",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9f8c1eeaa53d1901f0fc4379c3ca16ad",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "51606",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "44558d7f-82eb-4310-a452-7e7b2b01057c",
        "x-ms-original-request-ids": [
          "bd98bbe8-4b15-47a5-90a6-92d12cbe0396",
          "becc24ea-a697-4a2a-8279-a3751645012d",
          "2a78f2d4-b984-4a0a-8e47-647a9c03d180"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "11943",
        "x-ms-request-id": "44558d7f-82eb-4310-a452-7e7b2b01057c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153823Z:44558d7f-82eb-4310-a452-7e7b2b01057c"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet6740",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740",
            "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "a34c9c2b-709d-4324-99b5-bc264c2a0c11",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"aab6be00-2b1a-43cb-a408-c458aa644187\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          },
          {
            "name": "NRMS-runnztc2q22ruvnet-1199",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199",
            "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "e6a69935-ad4a-443d-b177-0e6d0bdf2898",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/virtualNetworks/vnet-1199/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-77ii2aynewgdavnet-hdi-0809",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809",
            "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "bc057244-e333-4981-aebc-f99f3f7378d6",
              "securityRules": [
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-106",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-103",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-107",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-108",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-101",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-105",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-109",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-104",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/virtualNetworks/vnet-hdi-0809/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-3ammvlly5cgsyvnet-6379",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379",
            "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "85893a4b-a3d3-4d53-8bc5-af1af6dc1bc9",
              "securityRules": [
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-107",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-106",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-104",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-101",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-109",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-108",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-105",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-103",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/virtualNetworks/vnet-6379/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-a4mwcm5uxdxl4vnet-8017",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017",
            "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "09a97d6c-aac9-41fe-b97b-c2e316761813",
              "securityRules": [
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-101",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-107",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-109",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-105",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-106",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-104",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-108",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-103",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/virtualNetworks/vnet-8017/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-kbijcrymaw3z6vnet-5947",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947",
            "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "3f6bbd65-1b02-4e21-b2f4-ed8aa9ce1921",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/virtualNetworks/vnet-5947/subnets/default"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups/azsmnet6740?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-11270523d0e2f2bc84ee18c82d9bda1e-22fffc0b7250bac6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3f71ff26446bf6d02b02ec004533bfd4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9d1b41b9-f3b9-42b6-a325-a4ad289884d8?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:38:24 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/9d1b41b9-f3b9-42b6-a325-a4ad289884d8?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d133f601-2b7a-41fe-9afe-4f2128545183",
        "x-ms-client-request-id": "3f71ff26446bf6d02b02ec004533bfd4",
        "x-ms-correlation-request-id": "2c818f55-1a19-4990-9618-dbcd009b7dba",
        "x-ms-ratelimit-remaining-subscription-deletes": "14994",
        "x-ms-request-id": "9d1b41b9-f3b9-42b6-a325-a4ad289884d8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153824Z:2c818f55-1a19-4990-9618-dbcd009b7dba"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9d1b41b9-f3b9-42b6-a325-a4ad289884d8?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-11270523d0e2f2bc84ee18c82d9bda1e-86db95093f7daad6-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1360274c41bba64e4d96733bb800d4bc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:24 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "81583e5a-56d4-419f-896a-5c99c2c87a18",
        "x-ms-client-request-id": "1360274c41bba64e4d96733bb800d4bc",
        "x-ms-correlation-request-id": "758dcd72-ee4d-4e18-bb89-97fc530dad07",
        "x-ms-ratelimit-remaining-subscription-reads": "11942",
        "x-ms-request-id": "0428d42d-bb14-4591-b925-d53a412d229b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153824Z:758dcd72-ee4d-4e18-bb89-97fc530dad07"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4593/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f98d6e3c67f511c3284c94d03256d01a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:38:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7fed5eb4-4b9b-489a-ae07-2eeae6d29337",
        "x-ms-client-request-id": "f98d6e3c67f511c3284c94d03256d01a",
        "x-ms-correlation-request-id": "fc3ab501-162d-4e5a-a016-0851d3e21066",
        "x-ms-ratelimit-remaining-subscription-reads": "11941",
        "x-ms-request-id": "89d56843-c356-489c-b9e8-9851fb837292",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153825Z:fc3ab501-162d-4e5a-a016-0851d3e21066"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "177205313",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
